--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,10 @@
     <string name="app_name">Body Mass Index (BMI)</string>
     <string name="weight_kg_here">70.5</string>
     <string name="calculate_bmi">Calculate BMI</string>
-    <string name="height_m">Height (m)</string>
-    <string name="weight_kg">Weight (kg)</string>
+    <string name="height_m">Height</string>
+    <string name="weight_kg">Weight</string>
     <string name="height_m_here">1.80</string>
+    <string name="m">m</string>
+    <string name="kg">kg</string>
+    <string name="explanation" />
 </resources>
